No default snapshot name

--- a/default.env
+++ b/default.env
@@ -3,7 +3,7 @@ COMPOSE_FILE=era.yml:rpc-shared.yml
 # Path to .pgdump file containing an initial PG snapshot. aria2c the pgdump file you are given and
 # place the path here, e.g. ./snapshot.pgdump
 # After initial setup, you'll want to rm the file and unset PG_SNAPSHOT again
-PG_SNAPSHOT=./snapshot.pgdump
+PG_SNAPSHOT=
 # Ethereum L1 RPC. Has to be valid
 L1_RPC=https://eth-rpc.example.com
 # Ethereum chain ID. 1 mainnet, 5 goerli
