Delete call_traces after pg_restore

--- a/default.env
+++ b/default.env
@@ -4,6 +4,9 @@ COMPOSE_FILE=era.yml:rpc-shared.yml
 # place the path here, e.g. ./snapshot.pgdump
 # After initial setup, you'll want to rm the file and unset PG_SNAPSHOT again
 PG_SNAPSHOT=
+# Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
+CALL_TRACES=false
+API_NAMESPACES=eth,net,web3,zks,pubsub
 # Ethereum L1 RPC. Has to be valid
 L1_RPC=https://eth-rpc.example.com
 # Ethereum chain ID. 1 mainnet, 5 goerli
