--- a/era.yml
+++ b/era.yml
@@ -30,7 +30,7 @@ services:
       - EN_ESTIMATE_GAS_SCALE_FACTOR=1.2
       - EN_ESTIMATE_GAS_ACCEPTABLE_OVERESTIMATION=1000
       - EN_MAX_TX_SIZE=1000000
-      - EN_API_NAMESPACES=eth,net,web3,zks,pubsub
+      - EN_API_NAMESPACES=${API_NAMESPACES}
       - MISC_LOG_FORMAT=plain
       - MISC_SENTRY_URL=unset
       - MISC_SENTRY_PANIC_INTERVAL=1800
@@ -83,6 +83,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=eranode
+      - CALL_TRACES=${CALL_TRACES:-false}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       start_period: 5s
