Snapshot read-only in postgres container

--- a/era.yml
+++ b/era.yml
@@ -90,7 +90,7 @@ services:
       interval: 10s
       timeout: 5s
     volumes:
-      - ${PG_SNAPSHOT:-.nada}:/tmp/snapshot.pgdump
+      - ${PG_SNAPSHOT:-.nada}:/tmp/snapshot.pgdump:ro
       - ./load-snapshot.sh:/docker-entrypoint-initdb.d/load-snapshot.sh
       - erapg-data:/var/lib/postgresql/data/
     command: postgres -c shared_buffers=512MB -c effective_cache_size=16GB
