--- a/default.env
+++ b/default.env
@@ -17,7 +17,7 @@ L2_CHAIN_ID=324
 MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 
 RUST_LOG=zksync_core=debug,zksync_dal=info,zksync_eth_client=info,zksync_merkle_tree=info,zksync_storage=info,zksync_state=debug,zksync_types=info,vm=info,zksync_external_node=info,zksync_utils=debug,
-NODE_DOCKER_TAG=v17.1.0
+NODE_DOCKER_TAG=latest
 PG_DOCKER_TAG=16-bookworm
 # Era Docker updates its code to latest by default.
 # Set a github tag here to pin it to a version.
