Postgres downloads and deletes snapshot

--- a/default.env
+++ b/default.env
@@ -1,8 +1,6 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
 COMPOSE_FILE=era.yml:rpc-shared.yml
-# Path to .pgdump file containing an initial PG snapshot. aria2c the pgdump file you are given and
-# place the path here, e.g. ./snapshot.pgdump
-# After initial setup, you'll want to rm the file and unset PG_SNAPSHOT again
+# URL to .pgdump file containing an initial PG snapshot.
 PG_SNAPSHOT=
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
