zkSync not ZKSync

--- a/default.env
+++ b/default.env
@@ -9,9 +9,9 @@ API_NAMESPACES=eth,net,web3,zks,pubsub
 L1_RPC=https://eth-rpc.example.com
 # Ethereum chain ID. 1 mainnet, 5 goerli
 L1_CHAIN_ID=1
-# ZKSync Era chain ID. 324 mainnet, 280 testnet
+# zkSync Era chain ID. 324 mainnet, 280 testnet
 L2_CHAIN_ID=324
-# ZKSync Era main node URL. https://zksync2-testnet.zksync.dev for testnet
+# zkSync Era main node URL. https://zksync2-testnet.zksync.dev for testnet
 MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 
 RUST_LOG=zksync_core=debug,zksync_dal=info,zksync_eth_client=info,zksync_merkle_tree=info,zksync_storage=info,zksync_state=debug,zksync_types=info,vm=info,zksync_external_node=info,zksync_utils=debug,
