--- a/default.env
+++ b/default.env
@@ -1,7 +1,11 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
-COMPOSE_FILE=era.yml:rpc-shared.yml
+COMPOSE_FILE=era.yml:sql.yml:rpc-shared.yml
 # URL to .pgdump file containing an initial PG snapshot.
 PG_SNAPSHOT=
+# How to connect to SQL - either postgres if local or the IP of the host running postgres
+SQL_NODE=postgres
+# IP address to share ports on. All if left empty
+SHARE_IP=
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
 API_NAMESPACES=eth,net,web3,zks,pubsub
