Make pgSQL parameters configurable

--- a/psql.yml
+++ b/psql.yml
@@ -31,7 +31,7 @@ services:
     volumes:
       - ./load-snapshot.sh:/docker-entrypoint-initdb.d/load-snapshot.sh
       - erapg-data:/var/lib/postgresql/data/
-    command: postgres -c shared_buffers=512MB -c effective_cache_size=16GB
+    command: postgres ${PG_PARAMS}
 
 volumes:
   eranode-data:
