--- a/default.env
+++ b/default.env
@@ -6,6 +6,8 @@ PG_SNAPSHOT=
 SQL_NODE=postgres
 # IP address to share ports on. All if left empty
 SHARE_IP=
+# Parameters for PostgreSQL performance
+PG_PARAMS=-c shared_buffers=512MB -c effective_cache_size=16GB
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
 API_NAMESPACES=eth,net,web3,zks,pubsub
@@ -19,7 +21,7 @@ L2_CHAIN_ID=324
 MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 
 RUST_LOG=zksync_core=debug,zksync_dal=info,zksync_eth_client=info,zksync_merkle_tree=info,zksync_storage=info,zksync_state=debug,zksync_types=info,vm=info,zksync_external_node=info,zksync_utils=debug,
-NODE_DOCKER_TAG=v20.5.2
+NODE_DOCKER_TAG=v20.8.0
 PG_DOCKER_TAG=16-bookworm
 # Era Docker updates its code to latest by default.
 # Set a github tag here to pin it to a version.
