--- a/default.env
+++ b/default.env
@@ -7,6 +7,8 @@ SQL_NODE=postgres
 # IP address to share ports on. All if left empty
 SHARE_IP=
 # Parameters for PostgreSQL performance
+# For a standalone PostgreSQL with 64 GiB RAM, consider these:
+# -c shared_buffers=16GB -c effective_cache_size=16GB -c work_mem=512MB -c maintenance_work_mem=3GB
 PG_PARAMS=-c shared_buffers=512MB -c effective_cache_size=16GB
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
