--- a/default.env
+++ b/default.env
@@ -8,8 +8,8 @@ SQL_NODE=postgres
 SHARE_IP=
 # Parameters for PostgreSQL performance
 # For a standalone PostgreSQL with 64 GiB RAM, consider these:
-# -c shared_buffers=16GB -c effective_cache_size=16GB -c work_mem=512MB -c maintenance_work_mem=3GB
-PG_PARAMS=-c shared_buffers=512MB -c effective_cache_size=16GB
+# -c shared_buffers=16GB -c effective_cache_size=16GB -c work_mem=512MB -c maintenance_work_mem=3GB -c max_wal_size=2GB
+PG_PARAMS=-c shared_buffers=512MB -c effective_cache_size=16GB -c max_wal_size=2GB
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
 API_NAMESPACES=eth,net,web3,zks,pubsub
