Document split deployment

--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
-COMPOSE_FILE=era.yml:sql.yml:rpc-shared.yml
+COMPOSE_FILE=era.yml:psql.yml:rpc-shared.yml
 # URL to .pgdump file containing an initial PG snapshot.
 PG_SNAPSHOT=
 # How to connect to SQL - either postgres if local or the IP of the host running postgres
@@ -7,8 +7,8 @@ SQL_NODE=postgres
 # IP address to share ports on. All if left empty
 SHARE_IP=
 # Parameters for PostgreSQL performance
-# For a standalone PostgreSQL with 64 GiB RAM, consider these:
-# -c shared_buffers=16GB -c effective_cache_size=16GB -c work_mem=512MB -c maintenance_work_mem=3GB -c max_wal_size=2GB
+# For a standalone PostgreSQL with 32 GiB RAM, consider these:
+# -c shared_buffers=8GB -c effective_cache_size=16GB -c work_mem=512MB -c maintenance_work_mem=3GB -c max_wal_size=2GB
 PG_PARAMS=-c shared_buffers=512MB -c effective_cache_size=16GB -c max_wal_size=2GB
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
@@ -23,7 +23,7 @@ L2_CHAIN_ID=324
 MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 
 RUST_LOG=zksync_core=debug,zksync_dal=info,zksync_eth_client=info,zksync_merkle_tree=info,zksync_storage=info,zksync_state=debug,zksync_types=info,vm=info,zksync_external_node=info,zksync_utils=debug,
-NODE_DOCKER_TAG=v20.8.0
+NODE_DOCKER_TAG=v21.0.2
 PG_DOCKER_TAG=16-bookworm
 # Era Docker updates its code to latest by default.
 # Set a github tag here to pin it to a version.
