Add response size

--- a/era.yml
+++ b/era.yml
@@ -38,6 +38,7 @@ services:
       - EN_ESTIMATE_GAS_SCALE_FACTOR=1.2
       - EN_ESTIMATE_GAS_ACCEPTABLE_OVERESTIMATION=1000
       - EN_MAX_TX_SIZE=1000000
+      - EN_MAX_RESPONSE_BODY_SIZE_MB=100
       - EN_API_NAMESPACES=${API_NAMESPACES}
       - MISC_LOG_FORMAT=plain
       - MISC_SENTRY_URL=unset
