--- a/default.env
+++ b/default.env
@@ -2,6 +2,10 @@
 COMPOSE_FILE=era.yml:psql.yml:rpc-shared.yml
 # URL to .pgdump file containing an initial PG snapshot.
 PG_SNAPSHOT=
+# Pruning config - if the node prunes, it won't be able to return data beyond the pruning threshold
+PRUNING=false
+# In seconds - this example is 30 days
+PRUNING_RETENTION=2592000
 # How to connect to SQL - either postgres if local or the IP of the host running postgres
 SQL_NODE=postgres
 # IP address to share ports on. All if left empty
@@ -22,7 +26,7 @@ L2_CHAIN_ID=324
 # zkSync Era main node URL. https://zksync2-testnet.zksync.dev for testnet
 MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 
-RUST_LOG=zksync_core=debug,zksync_dal=info,zksync_eth_client=info,zksync_merkle_tree=info,zksync_storage=info,zksync_state=debug,zksync_types=info,vm=info,zksync_external_node=info,zksync_utils=debug,
+RUST_LOG=warn,zksync=info,zksync_core::metadata_calculator=debug,zksync_state=debug,zksync_utils=debug,zksync_web3_decl::client=error
 NODE_DOCKER_TAG=v24.6.0
 PG_DOCKER_TAG=16-bookworm
 # Era Docker updates its code to latest by default.
@@ -41,4 +45,4 @@ WS_PORT=3061
 METRICS_PORT=3322
 
 # Used by erad update - please do not adjust
-ENV_VERSION=2
+ENV_VERSION=3
