--- a/era.yml
+++ b/era.yml
@@ -36,6 +36,7 @@ services:
     depends_on:
       era-init:
         condition: service_completed_successfully
+    command: --enable-consensus
     environment: # The node is configured entirely via ENV variables
       - EN_SNAPSHOTS_RECOVERY_ENABLED=true
       - EN_SNAPSHOTS_OBJECT_STORE_BUCKET_BASE_URL=zksync-era-mainnet-external-node-snapshots
