Use PostgreSQL params from era team

--- a/default.env
+++ b/default.env
@@ -11,9 +11,9 @@ SQL_NODE=postgres
 # IP address to share ports on. All if left empty
 SHARE_IP=
 # Parameters for PostgreSQL performance
-# For a standalone PostgreSQL with 32 GiB RAM, consider these:
-# -c shared_buffers=8GB -c effective_cache_size=16GB -c work_mem=512MB -c maintenance_work_mem=3GB -c max_wal_size=2GB
-PG_PARAMS=-c shared_buffers=512MB -c effective_cache_size=16GB -c max_wal_size=2GB
+# The recommended parameters by the zkSync Era team are:
+# -c max_connections=200 -c log_error_verbosity=terse -c shared_buffers=2GB -c effective_cache_size=4GB -c maintenance_work_mem=1GB -c checkpoint_completion_target=0.9 -c random_page_cost=1.1 -c effective_io_concurrency=200 -c min_wal_size=4GB -c max_wal_size=16GB -c max_worker_processes=16 -c checkpoint_timeout=1800
+PG_PARAMS=-c max_connections=200 -c log_error_verbosity=terse -c shared_buffers=2GB -c effective_cache_size=4GB -c maintenance_work_mem=1GB -c checkpoint_completion_target=0.9 -c random_page_cost=1.1 -c effective_io_concurrency=200 -c min_wal_size=4GB -c max_wal_size=16GB -c max_worker_processes=16 -c checkpoint_timeout=1800
 # Whether to keep the call_traces table for the debug namespace. By default, that namespace is disabled
 CALL_TRACES=false
 API_NAMESPACES=eth,net,web3,zks,pubsub
