--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,4 +1,4 @@
-ARG DOCKER_TAG
+ARG DOCKER_TAG=16-bookworm
 FROM postgres:${DOCKER_TAG}
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y aria2
