--- a/default.env
+++ b/default.env
@@ -1,6 +1,9 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
+# Please see https://github.com/zkLinkProtocol/zksync-era/blob/zklink/docs/guides/external-node/docker-compose-examples/docker-compose.yml
+# for zkLink parameters such as chain IDs, L1 RPC and Mainnet URL.
 COMPOSE_FILE=era.yml:psql.yml:rpc-shared.yml
 # URL to .pgdump file containing an initial PG snapshot.
+# Snapshot URL for zkLink is at https://docs.zklink.io/developer/run-a-node
 PG_SNAPSHOT=
 # Pruning config - if the node prunes, it won't be able to return data beyond the pruning threshold
 PRUNING=false
