--- a/default.env
+++ b/default.env
@@ -30,8 +30,12 @@ L2_CHAIN_ID=324
 MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 
 RUST_LOG=warn,zksync=info,zksync_core::metadata_calculator=debug,zksync_state=debug,zksync_utils=debug,zksync_web3_decl::client=error
-NODE_DOCKER_TAG=v24.12.0
-PG_DOCKER_TAG=16-bookworm
+NODE_DOCKER_TAG=v27.1.1
+PG_DOCKER_TAG=17-bookworm
+
+# External Docker network if using ext-network.yml
+DOCKER_EXT_NETWORK=traefik_default
+
 # Era Docker updates its code to latest by default.
 # Set a github tag here to pin it to a version.
 SCRIPT_TAG=
@@ -48,4 +52,4 @@ WS_PORT=3061
 METRICS_PORT=3322
 
 # Used by erad update - please do not adjust
-ENV_VERSION=3
+ENV_VERSION=4
