Configurable PG_UPGRADE_TAG

--- a/default.env
+++ b/default.env
@@ -32,6 +32,8 @@ MAIN_NODE_URL=https://zksync2-mainnet.zksync.io
 RUST_LOG=warn,zksync=info,zksync_core::metadata_calculator=debug,zksync_state=debug,zksync_utils=debug,zksync_web3_decl::client=error
 NODE_DOCKER_TAG=v27.1.1
 PG_DOCKER_TAG=17-bookworm
+# Version of PostgreSQL to target during ./erad upgrade-postgres. Digits only, no `-bookworm` at the end
+PG_UPGRADE_TAG=17
 
 # External Docker network if using ext-network.yml
 DOCKER_EXT_NETWORK=traefik_default
@@ -52,4 +54,4 @@ WS_PORT=3061
 METRICS_PORT=3322
 
 # Used by erad update - please do not adjust
-ENV_VERSION=4
+ENV_VERSION=5
